@@ -90,6 +90,10 @@ modificationset=net.sourceforge.cruisecontrol.ModificationSet
 publishers=net.sourceforge.cruisecontrol.ProjectConfig$Publishers
 schedule=net.sourceforge.cruisecontrol.Schedule
 
+# manipulators
+gzip=net.sourceforge.cruisecontrol.logmanipulators.GZIPManipulator
+delete=net.sourceforge.cruisecontrol.logmanipulators.DeleteManipulator
+
 # other
 merge=net.sourceforge.cruisecontrol.buildloggers.MergeLogger
 map=net.sourceforge.cruisecontrol.publishers.email.EmailMapping
